# intro-to-rabbitmq

./: README.md  docker-compose.yml
config/: rabbitmq.conf
consumer/: Dockerfile  pyproject.toml
consumer/src/consumer/: main.py
producer/: Dockerfile  pyproject.toml
producer/src/producer/: main.py
