[project]
name = "intro-rabbitmq-producer"
version = "0.1.0"
authors = [
    {name = "Bryan \"Beege\" Berry", email = "beege@codeseoul.org"}
]
license = { text = "MIT License" }
dependencies = [
    "pika~=1.3.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/producer"]
